RESOLVED FIXED197986
[GLIB] Repeating timer is not stopped when stop is called from the callback
https://bugs.webkit.org/show_bug.cgi?id=197986
Summary [GLIB] Repeating timer is not stopped when stop is called from the callback
Carlos Garcia Campos
Reported 2019-05-17 08:23:38 PDT
In case of repeating timers we always update the ready time to fire interval after the user callback is called.
Attachments
Patch (2.32 KB, patch)
2019-05-17 08:27 PDT, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2019-05-17 08:27:04 PDT
Carlos Garcia Campos
Comment 2 2019-05-20 01:11:04 PDT
Radar WebKit Bug Importer
Comment 3 2019-05-20 01:12:21 PDT
Note You need to log in before you can comment on or make changes to this bug.